pod configs added.

--- a/Example/ABPicker/Base.lproj/Main_iPhone.storyboard
+++ b/Example/ABPicker/Base.lproj/Main_iPhone.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ABViewController" sceneMemberID="viewController">
@@ -15,8 +16,31 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BF0-UE-V7b" customClass="PickerTextFieldView">
+                                <rect key="frame" x="0.0" y="259" width="320" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="kx3-Sf-3fG"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="constraintHeight" destination="kx3-Sf-3fG" id="ibh-LM-x2I"/>
+                                    <outlet property="dtPickerDataSource" destination="vXZ-lx-hvc" id="TuP-0x-Spc"/>
+                                    <outlet property="dtPickerDelegate" destination="vXZ-lx-hvc" id="16K-Nx-blf"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="BF0-UE-V7b" secondAttribute="centerY" id="JB4-ig-jmW"/>
+                            <constraint firstAttribute="trailing" secondItem="BF0-UE-V7b" secondAttribute="trailing" id="eLb-vJ-5bP"/>
+                            <constraint firstAttribute="centerX" secondItem="BF0-UE-V7b" secondAttribute="centerX" id="hDX-2d-kC8"/>
+                            <constraint firstItem="BF0-UE-V7b" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="zMZ-Bf-fsp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="abPickerView" destination="BF0-UE-V7b" id="DJq-Lu-hg4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
